--- a/src/vista/MaquinaCafe.form
+++ b/src/vista/MaquinaCafe.form
@@ -327,6 +327,14 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtpago">
       <Properties>
+        <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+          <Border info="org.netbeans.modules.form.compat2.border.EtchedBorderInfo">
+            <EtchetBorder>
+              <Color PropertyName="highlight" blue="0" green="0" red="ff" type="rgb"/>
+              <Color PropertyName="shadow" blue="0" green="0" red="66" type="rgb"/>
+            </EtchetBorder>
+          </Border>
+        </Property>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <AuxValues>
